--- a/CsvImportSite.Tests/CsvImportSiteJS.Tests.csproj
+++ b/CsvImportSite.Tests/CsvImportSiteJS.Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CsvImportSite\CsvImportSite.csproj" />
+    <ProjectReference Include="..\CsvImportSite\CsvImportSiteJS.csproj" />
   </ItemGroup>
 
 </Project>
