--- a/CsvImportSite/Dockerfile
+++ b/CsvImportSite/Dockerfile
@@ -6,16 +6,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["CsvImportSite/CsvImportSite.csproj", "CsvImportSite/"]
-RUN dotnet restore "CsvImportSite/CsvImportSite.csproj"
+COPY ["CsvImportSite/CsvImportSiteJS.csproj", "CsvImportSite/"]
+RUN dotnet restore "CsvImportSite/CsvImportSiteJS.csproj"
 COPY . .
 WORKDIR "/src/CsvImportSite"
-RUN dotnet build "CsvImportSite.csproj" -c Release -o /app/build
+RUN dotnet build "CsvImportSiteJS.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "CsvImportSite.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "CsvImportSiteJS.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CsvImportSite.dll"]
+ENTRYPOINT ["dotnet", "CsvImportSiteJS.dll"]
